--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@ limitations under the License.
 
 <section class="commerce-hero-content-wrapper center overflow-hidden">
   <a href="product-listing.amp.html" class="text-decoration-none block">
-      <amp-img class="commerce-hero-image" src="../img/e-commerce/narrow-landing-01.jpg" width="750" height="573" layout="responsive" media="(max-width: 52.06rem)" alt="Hero Landing 1" noloading="">
+      <amp-img class="commerce-hero-image" src="./img/e-commerce/narrow-landing-01.jpg" width="750" height="573" layout="responsive" media="(max-width: 52.06rem)" alt="Hero Landing 1" noloading="">
 <div placeholder="" class="commerce-loader"></div>      </amp-img>
-      <amp-img class="commerce-hero-image" src="../img/e-commerce/wide-landing-01.jpg" width="2560" height="800" layout="responsive" media="(min-width: 52.07rem)" alt="Hero Landing 1" noloading="">
+      <amp-img class="commerce-hero-image" src="./img/e-commerce/wide-landing-01.jpg" width="2560" height="800" layout="responsive" media="(min-width: 52.07rem)" alt="Hero Landing 1" noloading="">
 <div placeholder="" class="commerce-loader"></div>      </amp-img>
   <div class="commerce-hero-content commerce-hero-content-theme-primary flex justify-center flex-column md-mx-auto md-p0">
     <div class="commerce-hero-align md-mx-auto">
@@ -165,9 +165,9 @@ limitations under the License.
 </section>
 <section class="commerce-hero-content-wrapper center overflow-hidden">
   <a href="blog-listing.amp.html" class="text-decoration-none block">
-      <amp-img class="commerce-hero-image" src="../img/e-commerce/narrow-landing-02.jpg" width="750" height="573" layout="responsive" media="(max-width: 52.06rem)" alt="Hero Landing 1" noloading="">
+      <amp-img class="commerce-hero-image" src="./img/e-commerce/narrow-landing-02.jpg" width="750" height="573" layout="responsive" media="(max-width: 52.06rem)" alt="Hero Landing 1" noloading="">
 <div placeholder="" class="commerce-loader"></div>      </amp-img>
-      <amp-img class="commerce-hero-image" src="../img/e-commerce/wide-landing-02.jpg" width="2560" height="800" layout="responsive" media="(min-width: 52.07rem)" alt="Hero Landing 1" noloading="">
+      <amp-img class="commerce-hero-image" src="./img/e-commerce/wide-landing-02.jpg" width="2560" height="800" layout="responsive" media="(min-width: 52.07rem)" alt="Hero Landing 1" noloading="">
 <div placeholder="" class="commerce-loader"></div>      </amp-img>
   <div class="commerce-hero-content commerce-hero-content-theme-primary flex justify-center flex-column md-mx-auto md-p0">
     <div class="commerce-hero-align md-mx-auto">
@@ -180,9 +180,9 @@ limitations under the License.
 </section>
 <section class="commerce-hero-content-wrapper center overflow-hidden">
   <a href="product-listing.amp.html" class="text-decoration-none block">
-      <amp-img class="commerce-hero-image" src="../img/e-commerce/narrow-landing-03.jpg" width="750" height="573" layout="responsive" media="(max-width: 52.06rem)" alt="Hero Landing 1" noloading="">
+      <amp-img class="commerce-hero-image" src="./img/e-commerce/narrow-landing-03.jpg" width="750" height="573" layout="responsive" media="(max-width: 52.06rem)" alt="Hero Landing 1" noloading="">
 <div placeholder="" class="commerce-loader"></div>      </amp-img>
-      <amp-img class="commerce-hero-image" src="../img/e-commerce/wide-landing-03.jpg" width="2560" height="800" layout="responsive" media="(min-width: 52.07rem)" alt="Hero Landing 1" noloading="">
+      <amp-img class="commerce-hero-image" src="./img/e-commerce/wide-landing-03.jpg" width="2560" height="800" layout="responsive" media="(min-width: 52.07rem)" alt="Hero Landing 1" noloading="">
 <div placeholder="" class="commerce-loader"></div>      </amp-img>
   <div class="commerce-hero-content commerce-hero-content-theme-secondary flex justify-center flex-column md-mx-auto md-p0">
     <div class="commerce-hero-align md-mx-auto">
