--- a/index.html
+++ b/index.html
@@ -191,9 +191,6 @@ limitations under the License.
                 <a class="text-decoration-none" href="#">Our Background</a>
               </li>
               <li>
-                <a class="text-decoration-none" href="#">Returns Policy</a>
-              </li>
-              <li>
                 <a class="text-decoration-none" href="#">Cookie &amp; privacy policy</a>
               </li>
           </ul>
@@ -203,7 +200,7 @@ limitations under the License.
           <h2 class="commerce-footer-header h7 pb2">Contact Us</h2>
           <ul class="list-reset pb3 md-mx0">
               <li>
-                <a class="text-decoration-none" href="tel:+440000000000">+44(0)000 000 0000</a>
+                <a class="text-decoration-none" href="tel:+639499975880">+63(949)997-5880</a>
               </li>
               <li>
                 <a class="text-decoration-none" href="mailto:support@topro.business">info@topro</a>
