--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ limitations under the License.
     <ul class="list-reset m0 p0 ampstart-label">
         <li>
           <a href="landing.amp.html" class="text-decoration-none block 22">
-          <amp-img src="../img/e-commerce/logo-nav.png" width="279" height="175" layout="responsive" class="ampstart-sidebar-nav-image inline-block mb4" alt="Company logo" noloading="">
+          <amp-img src="./img/e-commerce/logo-nav.png" width="279" height="175" layout="responsive" class="ampstart-sidebar-nav-image inline-block mb4" alt="Company logo" noloading="">
             <div placeholder="" class="commerce-loader"></div>
           </amp-img>
           </a>
