--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ limitations under the License.
 </ul>
       </li>
       <li class="flex-auto right-align">
-        <amp-img src="./img/e-commerce/logoT.png" width="153" height="96" layout="fixed" class="my0 mx-auto " alt=""></amp-img>
+        <amp-img src="./img/e-commerce/logo-nav.png" width="279" height="175" layout="responsive" class="ampstart-sidebar-nav-image inline-block mb4" alt="Company logo" noloading="">
         </li>
     </ul>
   </nav>
