--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ limitations under the License.
   <main id="content" role="main" class="main commerce-landing">
 
 <section class="commerce-hero-content-wrapper center overflow-hidden">
-  <a href="product-listing.amp.html" class="text-decoration-none block">
+  <a href=" " class="text-decoration-none block">
       <amp-img class="commerce-hero-image" src="./img/e-commerce/narrow-landing-01.jpg" width="750" height="573" layout="responsive" media="(max-width: 52.06rem)" alt="Hero Landing 1" noloading="">
 <div placeholder="" class="commerce-loader"></div>      </amp-img>
       <amp-img class="commerce-hero-image" src="./img/e-commerce/wide-landing-01.jpg" width="2560" height="800" layout="responsive" media="(min-width: 52.07rem)" alt="Hero Landing 1" noloading="">
@@ -165,7 +165,7 @@ limitations under the License.
 </section>
 
 <section class="commerce-hero-content-wrapper center overflow-hidden">
-  <a href="product-listing.amp.html" class="text-decoration-none block">
+  <a href=" " class="text-decoration-none block">
       <amp-img class="commerce-hero-image" src="./img/e-commerce/narrow-landing-03.jpg" width="750" height="573" layout="responsive" media="(max-width: 52.06rem)" alt="Hero Landing 1" noloading="">
 <div placeholder="" class="commerce-loader"></div>      </amp-img>
       <amp-img class="commerce-hero-image" src="./img/e-commerce/wide-landing-03.jpg" width="2560" height="800" layout="responsive" media="(min-width: 52.07rem)" alt="Hero Landing 1" noloading="">
