--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ limitations under the License.
   <div class="commerce-hero-content commerce-hero-content-theme-primary flex justify-center flex-column md-mx-auto md-p0">
     <div class="commerce-hero-align md-mx-auto">
       <h2 class="commerce-hero-content-title h4 md-h1 caps md-mb2 md-pl4">We're just starting..</h2>
-      <p class="commerce-hero-content-body">These are the key frames, clothing and accessories every rider needs.</p>
+      <p class="commerce-hero-content-body">We are starting to build our rig. Progress is dependent on our salary and budget. We are building an affordable rig, realistic to everyone.</p>
         <div class="ampstart-btn ampstart-btn-secondary caps md-ml4">Get Updates</div>
     </div>
   </div>
