--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ limitations under the License.
     <div class="commerce-hero-align md-mx-auto">
       <h2 class="commerce-hero-content-title h4 md-h1 caps md-mb2 md-pl4">We're just starting..</h2>
       <p class="commerce-hero-content-body">We are starting to build our rig. Progress is dependent on our salary and budget. We are building an affordable rig, realistic to everyone.</p>
-        <div class="ampstart-btn ampstart-btn-secondary caps md-ml4"><a href="https://t.me/topro ">Get Updates</a></div>
+        <div class="ampstart-btn ampstart-btn-secondary caps md-ml4"><a href="https://t.me/topro" class="text-decoration-none block">Get Updates</a></div>
     </div>
   </div>
   </a>
