--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@ limitations under the License.
   <div class="commerce-hero-content commerce-hero-content-theme-secondary flex justify-center flex-column md-mx-auto md-p0">
     <div class="commerce-hero-align md-mx-auto">
       <h2 class="commerce-hero-content-title h4 md-h1 caps md-mb2 md-pl4">We're Building</h2>
-      <p class="commerce-hero-content-body">The steel-framed complete bike that combines peerless performance with timeless style.</p>
-        <div class="ampstart-btn ampstart-btn-secondary caps md-ml4">Get Updates</div>
+      <p class="commerce-hero-content-body">Parts are slowly coming in. We will post update via our Telegram Chat Room.</p>
+       <div class="ampstart-btn ampstart-btn-secondary caps md-ml4"><a href="https://t.me/topro" class="text-decoration-none block">Join Us</a></div>
     </div>
   </div>
   </a>
