--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <h2 class="commerce-footer-header h7 pb2">Contact Us</h2>
           <ul class="list-reset pb3 md-mx0">
               <li>
-                <a class="text-decoration-none" href="tel:63-949-997-5880">Call Us +63-949-997-5880</a>
+                <a class="text-decoration-none" href="tel:63-949-997-5880">Call Us</a>
               </li>
               <li>
                 <a class="text-decoration-none" href="sms:63-949-997-5880">Send iMessage</a>
